@page RN24 Release notes for PAPILO 2.4

@section RN240 PaPILO 2.4.0

Features
--------


Performance improvements
------------------------


Interface changes
-----------------

### New API functions

### Changed parameters

### New parameters with default values

### Data structures


Unit tests
----------


Testing
-------


Build system
------------


Fixed bugs
----------


Miscellaneous
-------------


Known issues
------------


@page RN23 Release notes for PAPILO 2.3

@section RN232 PaPILO 2.3.2

Fixed bugs
----------

Build system
------------

Known issues
------------

@section RN231 PaPILO 2.3.1

Fixed bugs
----------

- DominatedCols: compress set of dominations topologically to avert memory exhaustions
- Input and Output: handle floating point numbers precisely in parsers and writers
- OPB-Parser: handle additional whitespaces
- ParallelColDetection: only merge integral parallel columns for integral column scale
- ParallelColDetection: reduce complexity of hole detection for integral parallel columns
- Probing: eliminate computational overhead in row propagation
- Propagation: handle constraint propagation more carefully by applying feasibility instead of epsilon tolerance
- SimpleSubstitution: correct feasibility tolerances on euclidean coprime substitutions
- SingletonCols: order effective side changes to avoid invalid infeasibility
- SingletonStuffing: normalize and order sides to avoid invalid infeasibility
- Statistics: avoid counting calls of symmetry extensions additionally
- Trivial: mark activity redundancy in trivial row presolving

Build system
------------

- fixed build against HiGHS 1.7.2
- TBB is now no longer download automatically; to enable the download, set option TBB_DOWNLOAD to on
- added check whether linking of libatomic is necessary and possible to make std::atomic available

Known issues
------------

- SingletonCols: normalize if substituting constraint in the objective (when dual-postsolve is active)
