@@ -17,7 +17,16 @@ Interface changes
 
 ### Changed parameters
 
+- presolve.abortfac = 0.00080000000000000004: abort factor of weighted number of reductions for exhaustive presolving
+- presolve.lpabortfac = 0.01: abort factor of weighted number of reductions for exhaustive presolving LPs
+
 ### New parameters with default values
+
+- presolve.abortfacfast = 0.00080000000000000004: abort factor of weighted number of reductions for fast presolving
+- presolve.abortfacmedium = 0.00080000000000000004: abort factor of weighted number of reductions for medium presolving
+
+- presolve.lpabortfacfast = 0.01: abort factor of weighted number of reductions for fast presolving LPs
+- presolve.lpabortfacmedium = 0.01: abort factor of weighted number of reductions for medium presolving LPs
 
 ### Data structures
 
